add lock for client if it starts adverts and sync adverts in parallel